--- a/app/assets/stylesheets/regions/mastheads/boxes-masthead.scss
+++ b/app/assets/stylesheets/regions/mastheads/boxes-masthead.scss
@@ -3,8 +3,8 @@
   top: 0;
   left: auto;
   z-index: 1000;
-  // display: none;
   display: block;
+
   a {
     position: absolute;
     height: 56px;
@@ -12,23 +12,23 @@
     color: $white;
     top: -176px;
     cursor: pointer;
-    background-image: image-url('gray_arrows.png');
+    background-image: url("../img/gray_arrows.png");
     background-repeat: no-repeat;
+
     &.disabled {
       opacity: .4;
       filter: alpha(opacity = 40);
     }
   }
+
   .prev {
     background-position: left center;
     left: 0;
   }
+
   .next {
     background-position: right center;
     right: 0;
-  }
-  @include bp(wildcard-min, 768px) {
-    // display: block;
   }
 }
 
@@ -39,9 +39,11 @@
   padding: 0;
   margin: 0;
   list-style: none;
+
   &.oldie .inner {
 		word-break: break-all;
   }
+
   ul {
     width: 20000em;
     position: absolute;
@@ -49,37 +51,38 @@
     margin: 0;
     padding: 0;
   }
+
   li {
-    // max-width: 100%;
     max-width: 266px;
     padding: 0;
     margin: 0 21px 0 0;
     list-style: none;
     float: left;
     overflow: hidden;
+
     .no-js & {
       margin: 0 15px 0 0; // Prevents 4th item from overflowing to next line
     }
+
     img {
       position: relative;
       z-index: 1;
     }
+
     .item {
       display: block;
       height: 285px;
       position: relative;
-      background: $cu-red;
-    }
-    @include bp(wildcard-min, 768px) {
-    	// max-width: 266px;
+      background: #a82439;
     }
   }
+
   .caption {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-    background: $cu-red;
+    background: #a82439;
     top: 220px;
     position: absolute;
     -webkit-transition: all 1s;
@@ -95,10 +98,10 @@
     max-height: 215px;
     width: 100%;
     word-break: break-word;
+
     &:before {
       display: block;
       content: '';
-      // background-image: image-url('pointy_new.png');
       background-repeat: no-repeat;
       background-position: center top;
       position: absolute;
@@ -114,6 +117,7 @@
       transition: all 0.3s;
     }
   }
+
   .item {
   	.inner {
 	    position: absolute;
@@ -131,21 +135,26 @@
 	    transition-delay: 0s;
 	    word-break: break-all;
 	  }
+
 	  .caption:hover {
 	  	top: 50px;
 		  -webkit-transition-delay: 0s;
 		  -moz-transition-delay: 0s;
 		  transition-delay: 0s;
+
 	  	&:before {
 		    opacity: 0;
 		  }
+
 		  .inner {
 		    position: absolute;
 		  }
+
 		  .button {
 		    opacity: 1;
 		    -webkit-transition-delay: 1.3s;
 		  }
+
 		  .copy {
 		    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 		    filter: alpha(opacity = 100);
@@ -154,6 +163,7 @@
 		  }
 	  }
   }
+
   .copy {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity = 0);
@@ -170,8 +180,9 @@
     margin: 10px 0 0 0;
     line-height: 1.5;
     word-break: normal;
-	word-wrap: break-word;
+    word-wrap: break-word;
   }
+
   .button {
     opacity: 0;
     -webkit-transition: opacity 0.8s;
@@ -184,18 +195,19 @@
     transition-delay: 0s;
     background-color: $white;
     font-weight: 600;
-    color: $cu-red;
+    color: #830c28;
     float: left;
     padding: 5px 10px 5px 10px;
     margin-top: 15px;
   }
+
   .title {
     font-family: $font-stack-heading;
     font-size: 18px;
     font-weight: 600;
     position: relative;
     top: -3px;
-	word-wrap: break-word;
+    word-wrap: break-word;
     word-break: normal;
   }
 }
@@ -207,6 +219,7 @@
   overflow: hidden;
   position: relative;
   z-index: 100;
+
   @include bp(wildcard-min, 600px) {
   	width: 533px;
   }
@@ -222,9 +235,14 @@
   max-height: 440px;
   min-height: 240px !important;
   padding-bottom: 15px;
+
   @include bp(wildcard-min, 786px) {
   	height: auto !important;
     min-height: 340px !important;
     padding-bottom: 0;
   }
+}
+
+.oldie.miniRotator .inner{
+  word-break: break-all;
 }
