--- a/app/assets/stylesheets/regions/mastheads/slider-masthead-old.scss
+++ b/app/assets/stylesheets/regions/mastheads/slider-masthead-old.scss
@@ -1,13 +1,17 @@
+/* 11/2016: styles still in use while transitioning to new slider masthead (slider201611) */
+
 .rounded-slider {
   .rotatorContainer {
     max-width: 1130px;
     max-height: 440px;
-    background: $grey;
+    background: #353430;
     margin: 0 auto;
   }
+
   .flexslider {
     overflow: hidden !important;
   }
+
   .flex-control-nav {
 	  background: transparent;
 	  text-align: right;
@@ -18,25 +22,41 @@
 	  padding-top: 10px;
 	  right: 0;
 	  left: auto;
+
 	  li {
 	    display: inline-block;
 	    float: none;
 	    margin: 0 0 0 5px;
+
 	    a {
 	      width: 13px;
 	      height: 13px;
-	      background: image-url('pager_sprite.png') no-repeat;
+	      background: url(../img/pager_sprite.png) no-repeat;
 	      background-position: -13px 0;
 	      text-indent: 999px;
 	      overflow: hidden;
+
 	      &:hover, &.flex-active {
 	        background-position: 0 0;
 	      }
 	    }
 	  }
+	  
 	  @include bp(wildcard-min, 768px) {
 	  	position: absolute !important;
 	    padding-top: 0;
 	  }
 	}
+}
+
+.rotatorContainer .slide{
+  max-height: 440px;
+  min-height: 240px !important;
+  padding-bottom: 15px;
+
+	@media only screen and (min-width: 768px){
+  	height: auto !important;
+  	min-height: 340px !important;
+  	padding-bottom: 0;
+  }
 }
