fixed nav link images

--- a/app/assets/stylesheets/regions/mastheads/slider-masthead-old.scss
+++ b/app/assets/stylesheets/regions/mastheads/slider-masthead-old.scss
@@ -31,7 +31,7 @@
 	    a {
 	      width: 13px;
 	      height: 13px;
-	      background: url(../img/pager_sprite.png) no-repeat;
+	      background: image-url('pager_sprite.png') no-repeat;
 	      background-position: -13px 0;
 	      text-indent: 999px;
 	      overflow: hidden;
