--- a/app/assets/stylesheets/regions/mastheads/boxes-masthead.scss
+++ b/app/assets/stylesheets/regions/mastheads/boxes-masthead.scss
@@ -12,7 +12,7 @@
     color: $white;
     top: -176px;
     cursor: pointer;
-    background-image: url("../img/gray_arrows.png");
+    background-image: image-url('gray_arrows.png');
     background-repeat: no-repeat;
 
     &.disabled {
