--- a/app/assets/stylesheets/regions/mastheads/slider-masthead.scss
+++ b/app/assets/stylesheets/regions/mastheads/slider-masthead.scss
@@ -37,6 +37,10 @@ div.slider.version-201611 {
           bottom: 12px;
           padding: 32px;
 
+          div.subheader.absent {
+            display: none;
+          }
+
           h2 {
             margin: 0px auto 24px;
             padding: 0px;
