Adds width style for slider masthead to center title.

--- a/app/assets/stylesheets/regions/mastheads/slider-masthead.scss
+++ b/app/assets/stylesheets/regions/mastheads/slider-masthead.scss
@@ -36,6 +36,7 @@ div.slider.version-201611 {
           position: absolute;
           bottom: 12px;
           padding: 32px;
+          width: 100%;
 
           div.subheader.absent {
             display: none;
