--- a/app/assets/stylesheets/widgets/home_page/hero_panel.scss
+++ b/app/assets/stylesheets/widgets/home_page/hero_panel.scss
@@ -30,7 +30,7 @@
     margin-right: 10px;
   }
   .actions {
-    margin-top: 50px;
+    margin-top: 25px;
   }
   #mastheadContent {
     position: relative;
@@ -66,7 +66,7 @@
   }
   .heading {
     margin: 0;
-    padding: 40px 0 0 0;
+    padding: 0;
     font-size: 32px;
     line-height: 32px;
     text-transform: none;
@@ -78,7 +78,7 @@
     font-size: 32px;
     line-height: 32px;
     text-transform: none;
-    font-weight: 800;
+    font-weight: 100;
   }
   .excerpt {
     margin: 20px 0;
@@ -143,7 +143,7 @@
     height: 400px;
     padding: 15px 0 150px 0;
     .actions {
-      margin-top: 50px;
+      margin-top: 25px;
     }
   }
 }
@@ -174,7 +174,7 @@
 
 @media only screen and (min-width: 480px) {
   #hero {
-    .heading, .subheading, .excerpt {
+    .heading, .subheading {
       display: block;
     }
     .heading, .subheading {
@@ -194,7 +194,15 @@
   }
 }
 
-@media only screen and (min-width: 780px) {
+@media only screen and (min-width: 768px) {
+  #hero {
+    .excerpt {
+      display: block;
+    }
+  }  
+}
+
+@media only screen and (min-width: 1024px) {
   #hero {
     .heading {
       font-size: 40px;
