--- a/app/views/widgets/home_page/_hero_panel.html
+++ b/app/views/widgets/home_page/_hero_panel.html
@@ -10,7 +10,7 @@
     <div id="mastheadContent" class="maxWidth">
       <h2>
         <span class="heading  fast_transition" style="position: relative; left: 0px; opacity: 1;">California Scene Painting:</span>
-        <span class="subheading thin  fast_transition" style="position: relative; left: 0px; opacity: 1;">A Narrative Revolution</span>
+        <span class="subheading thin  fast_transition style="position: relative; left: 0px; opacity: 1;">A Narrative Revolution</span>
       </h2>
 
       <p class="excerpt fast_transition" style="position: relative; left: 0px; opacity: 1;">The once overlooked California Scene painting movement gets the recognition it deserves and a new home at the Hilbert Museum of California Art at Chapman University.</p>
