Corrected paste error.

--- a/app/views/widgets/home_page/_hero_panel.html
+++ b/app/views/widgets/home_page/_hero_panel.html
@@ -10,12 +10,12 @@
     <div id="mastheadContent" class="maxWidth">
       <h2>
         <span class="heading  fast_transition" style="position: relative; left: 0px; opacity: 1;">California Scene Painting:</span>
-        <span class="subheading thin  fast_transition style="position: relative; left: 0px; opacity: 1;">A Narrative Revolution</span>
+        <span class="subheading thin  fast_transition" style="position: relative; left: 0px; opacity: 1;">A Narrative Revolution</span>
       </h2>
 
       <p class="excerpt fast_transition" style="position: relative; left: 0px; opacity: 1;">The once overlooked California Scene painting movement gets the recognition it deserves and a new home at the Hilbert Museum of California Art at Chapman University.</p>
 
-      <div class="actions fast_transition style="position: relative; left: 0px; opacity: 1;"">
+      <div class="actions fast_transition" style="position: relative; left: 0px; opacity: 1;">
         <!-- # Watch Video Button
              # There's some Javascript that tweaks this and was causing an issue.
              # See https://github.com/chapmanu/cascade-assets/issues/93
