--- a/app/assets/stylesheets/layout_old/faculty/school-dept-faculty-search-results.scss
+++ b/app/assets/stylesheets/layout_old/faculty/school-dept-faculty-search-results.scss
@@ -1,24 +1,21 @@
 //used by school/dept listing (including LAW SCHOOL) for faculty directory pages (not main listing)
 
 .facultyList{    
-    margin:0 0 20px 0;
-	
+    margin:0 0 20px 0;	
 	.summary {
-    border-bottom: 1px dotted #565555;
-    padding: 10px 0 10px 0;
-    
-	.results {
-      font-size: 16px;
-    } 
-	
-    .resultsFor {
-      font-style: italic;
-      font-size: 14px;
-      border-left: 1px solid $black;
-      margin: 0 0 0 10px;
-      padding: 0 0 0 10px;
-    }
-  } // end summary
+    	border-bottom: 1px dotted #565555;
+    	padding: 10px 0 10px 0;    
+		.results {
+      		font-size: 16px;
+    	} 
+	    .resultsFor {
+			font-style: italic;
+			font-size: 14px;
+			border-left: 1px solid $black;
+			margin: 0 0 0 10px;
+			padding: 0 0 0 10px;
+    	}
+  	} // end summary
   
 	.facultyMember{
 		margin:20px 20px 2px 0;
@@ -28,16 +25,15 @@
 		position:relative;
 		min-height:100px;
 		padding:10px 20px 0 110px;  
-		border-top:1px dotted #c1c1c1;
-		
+		border-top:1px dotted #c1c1c1;		
 		@include bp(m) {
 			width:45%;
 		}
-	
+			
 		&:nth-child(odd){
 			margin-right:45px;
 		}
-		
+				
 		&:nth-child(even){
 			margin-right:0;
 		}
@@ -97,24 +93,25 @@
 	} //end facultyMenber
 	
 	.pagingInfo {
-    margin: 10px 0 0 0;
-    .pagingNavigation {
-      color: $cu-red;
-      > span {
-        &:first-child {
-          border: none;
-        }
-        padding: 0 4px 0 4px;
-        border-left: 1px solid $black;
-        text-decoration: underline;
-        cursor: hand;
-        cursor: pointer;
-      }
-      @include bp(m) {
-        float: right;
-      }
-    }
-  } // end pagingInfo
+    	margin: 10px 0 0 0;
+    	.pagingNavigation {
+      		color: $cu-red;
+      		>span {
+        		&:first-child {
+          			border: none;
+        		}
+				padding: 0 4px 0 4px;
+				border-left: 1px solid $black;
+				text-decoration: underline;
+				cursor: hand;
+				cursor: pointer;
+      		}
+		  @include bp(m) {
+			float: right;
+		  }
+    	} //end pagingNavigation
+  	} // end pagingInfo
+  
  } // end facultyList
 
 // separate section of styles for optional spotlight:
@@ -127,7 +124,7 @@
     background: -moz-radial-gradient(circle, #e2e1dc, #e2e1dc);
     background: -ms-radial-gradient(circle, #e2e1dc, #e2e1dc);
 
-	.copy{
+	.copy {
 		max-width:400px;
 		min-width:300px;
 		padding:0 10px 10px 10px;  
@@ -135,24 +132,24 @@
 		margin:10px 5px 10px 5px;   
 	}
 	
-	.copy>h2{
+	.copy > h2 {
 		font-weight:600;
 		color:#8f0c30;   
 		font-size:16px;
 		margin:0 0 10px 0;
 	}
 	
-	.video{
+	.video {
 		display:block;
 		position:relative;
 		float:left;
 	}
 	
-	.video>img{
+	.video > img {
 		margin:0;   
 	}
 	
-	.video>.playButton{
+	.video > .playButton {
 		position:absolute;
 		top:0;
 		right:0;
