font and margin fixes in faculty listings

--- a/app/assets/stylesheets/layout_old/faculty/profile-page.scss
+++ b/app/assets/stylesheets/layout_old/faculty/profile-page.scss
@@ -38,8 +38,8 @@
 	.jobTitle{
 		font-weight:normal;
 		font-size:16px; //set because part of h1 with name so need to be smaller
-		margin: 0;
-			line-height:17px;
+		margin-top: 3px;
+		line-height:17px;
 	}
 	
 	div[itemprop="affiliation"]{
