--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -18,6 +18,7 @@
     - primary_content/form_1
     - primary_content/logo_image_rotator_1
     - primary_content/featured_news_events_feed_1
+    - primary_content/wysiwyg_anchor_links
 
   left_column:
     - left_column/callout_1
