added an extra messaging 2 column video partial for vimeo & renamed original to youtube

--- a/app/views/1_column/hero_side_panel.html.erb
+++ b/app/views/1_column/hero_side_panel.html.erb
@@ -7,5 +7,7 @@
       - single_column/call_to_action_block
       - single_column/chapman_events_feed
       - single_column/messaging_1_column_facts
+      - single_column/messaging_2_column_youtube_video
+      - single_column/messaging_2_column_vimeo_video
   YAML
 %>
