--- a/app/views/widgets/right_column/_picasa_gallery.html
+++ b/app/views/widgets/right_column/_picasa_gallery.html
@@ -2,7 +2,7 @@
 	<h3>Picasa Widget</h3>
     <ul>
     </ul>
-    <a class="more-link" href="https://get.google.com/albumarchive/105740368086394902806">
+    <a class="more-link" href="javascript:;">
         See Full Gallery <span class="arrow">»</span>
     </a>
 </div>
