--- a/app/assets/stylesheets/layout_old/primary-content.scss
+++ b/app/assets/stylesheets/layout_old/primary-content.scss
@@ -131,10 +131,7 @@
 ---------------------------------------- */
 
 .subRotator {
-  padding: 15px 0 0 0;
-  background-color: #eaeaea;
-  background-repeat: no-repeat;
-  background-position: center 0px;
+  padding: 0;
   position: relative;
   top: 0;
 }
