--- a/app/assets/stylesheets/widgets/home_page/general_info.scss
+++ b/app/assets/stylesheets/widgets/home_page/general_info.scss
@@ -4,7 +4,6 @@
 
 .homepage {
   #generalInformation {
-    padding: 0 0 30px 0;
     a:after {
       content: " »";
     }
@@ -13,8 +12,8 @@
 
 @media only screen and (min-width: 680px) {
   .homepage {
-    #generalInformation {
-      padding: 0 0 80px 0;
+    .heading {
+      margin: 0 50px;
     }
   }
 }
