--- a/app/assets/stylesheets/widgets/home_page/graduate_admission.scss
+++ b/app/assets/stylesheets/widgets/home_page/graduate_admission.scss
@@ -3,10 +3,9 @@
 ***************************************************/
 
 #graduateAdmission {
-  background: #111111 image-url('graduate_admissions_960_v3.jpg') no-repeat center;
+  background: #111111 image-url('graduate-admission-2017.jpg') no-repeat center;
   background-size: cover;
   color: #FFFFFF;
-  padding: 50px 0;
   text-align: center;
   overflow: hidden;
   p, h3 {
@@ -19,34 +18,24 @@
 }
 
 #graduateAdmission {
-  .maxWidth {
-    position: relative;
-  }
   .heading {
-    margin: 0 auto 15px auto;
-    font-weight: 800;
-    text-align: center;
-  }
-  .subheading {
-    margin: 0 auto;
     font-weight: 400;
-    font-size: 26px;
-    line-height: 30px;
+    text-transform: uppercase;
     text-align: center;
-  }
-  p.subheading {
-    font-family: $font-stack-body;
-    font-weight: 800;
-    margin-top: 15px;
-  }
-  .statistics {
-    margin: 0 0 30px 0;
-    li {
-      margin: 0;
+    span {
+      display: block;
     }
   }
+  .subheading {
+    margin: 0 15px;
+    font-family: 'minion-pro', serif;
+    font-style: italic;
+    font-weight: 400;
+    text-align: center;
+  }
   .actions {
-    margin: 35px 0 40px 0;
+    margin-top: 25px;
+    text-align: center;
   }
   br.large-screens {
     display: none;
@@ -55,46 +44,38 @@
 
 @media only screen and (min-width: 680px) {
   #graduateAdmission {
-    background-image: image-url('graduate_admissions_1200_v3.jpg');
     text-align: left;
     background-position: center;
-    .statistics {
-      position: absolute;
-      top: 0;
-      left: 40px;
-    }
     .heading, .subheading {
+      margin: 0 50px;
       z-index: 1;
       position: relative;
     }
-    .actions {}
   }
 }
 
 @media only screen and (min-width: 980px) {
   #graduateAdmission {
+    .heading, .subheading {
+      text-align: right;
+      margin: 0 auto;
+    }
     .actions {
-      margin: 40px 0 100px 0;
+      position: absolute;
+      bottom: 0;
+      margin-bottom: 75px;
+      text-align: left;
+      margin-left: 25px;
     }
-    .statistics {
-      left: 20px;
-    }
-    .heading, .subheading {}
-  }
-}
-
-@media only screen and (min-width: 1180px) {
-  #graduateAdmission {
-    background-image: image-url('graduate_admissions_1706_v3.jpg');
-    padding: 100px;
-    .statistics {
-      left: -50px;
-    }
-    .heading, .subheading {}
   }
 }
 
 @media only screen and (min-width: 1250px) {
+  #graduateAdmission { 
+    .actions {
+      margin-left: 50px;
+    }
+  }
   #graduateAdmission br.large-screens {
     display: block;
   }
