Icon removal on buttons

--- a/app/views/widgets/home_page/_blog_stories.html
+++ b/app/views/widgets/home_page/_blog_stories.html
@@ -87,8 +87,8 @@
       </article>
     </div>
     <div class="actions">
-      <a class="button smc-cta monogram" data-cta-id="learn-more" href="//inside.chapman.edu/">Read more on Inside.Chapman</a>
-      <a class="button red smc-cta calendar" data-cta-id="learn-more" href="https://events.chapman.edu/">View our events calendar</a>
+      <a class="button smc-cta" data-cta-id="learn-more" href="//inside.chapman.edu/">Read more on Inside.Chapman</a>
+      <a class="button red smc-cta" data-cta-id="learn-more" href="https://events.chapman.edu/">View our events calendar</a>
     </div>
   </div>
   <!-- end maxwidth-->
