--- a/app/views/widgets/home_page/_undergraduate_admission.html
+++ b/app/views/widgets/home_page/_undergraduate_admission.html
@@ -24,9 +24,9 @@
       </li>
     </ul>
     <div class="actions">
-      <a class="button white monogram smc-cta" data--100-bottom="opacity:1" data-bottom="opacity:0" data-cta-id="homepage-ug-adm" href="https://www.chapman.edu/discover/index.html">Discover Chapman</a>
-      <a class="button white request-ug smc-cta" data--100-bottom="opacity:1" data-bottom="opacity:0" data-cta-id="homepage-ug-adm" href="https://go.chapman.edu/register/admission-info">Request information</a>
-      <a class="button white apply-ug smc-cta" data--100-bottom="opacity:1" data-bottom="opacity:0" data-cta-id="homepage-ug-adm" href="admission/undergraduate/applynow.aspx">Apply Today</a>
+      <a class="button white smc-cta" data--100-bottom="opacity:1" data-bottom="opacity:0" data-cta-id="homepage-ug-adm" href="https://www.chapman.edu/discover/index.html">Discover Chapman</a>
+      <a class="button white smc-cta" data--100-bottom="opacity:1" data-bottom="opacity:0" data-cta-id="homepage-ug-adm" href="https://go.chapman.edu/register/admission-info">Request information</a>
+      <a class="button white smc-cta" data--100-bottom="opacity:1" data-bottom="opacity:0" data-cta-id="homepage-ug-adm" href="admission/undergraduate/applynow.aspx">Apply Today</a>
     </div>
   </div>
 </section>
