Copy formatting change

--- a/app/views/widgets/home_page/_graduate_admission.html
+++ b/app/views/widgets/home_page/_graduate_admission.html
@@ -1,31 +1,12 @@
 <section class="section dark-bg skrollable skrollable-between" data-bottom-top="background-position: center 100px" data-top-bottom="background-position: center -100px" id="graduateAdmission">
   <div class="maxWidth">
-    <h2 class="heading skrollable skrollable-after" data-bottom="left:50px; opacity:0;" data-center="left:0; opacity:1;">Graduate Programs at Chapman </h2>
-    <h3 class="subheading skrollable skrollable-after" data-bottom="left:50px; opacity:0;" data-center="left:0; opacity:1;">We invite the inciters of change and disrupters of the ordinary to start their journey to mastery.</h3>
-    <div class="actions" data-bottom="opacity:0;" data-center="opacity:1;">
-      <a class="button red apply smc-cta skrollable skrollable-after" data-cta-id="homepage-grad-admv" data--100-bottom="opacity:1" data-bottom="opacity:0" href="http://www.chapman.edu/admission/graduate/applynow.aspx" style="opacity: 1;">Apply to a Graduate Program Today</a>
+    <div class="second ">
+      <h2 class="heading skrollable skrollable-after" data-bottom="right:50px; opacity:0;" data-center="right:0; opacity:1;">Graduate Programs <span>at <b>Chapman</b></span></h2>
+      <h3 class="subheading skrollable skrollable-after" data-bottom="right:50px; opacity:0;" data-center="right:0; opacity:1;">We invite the inciters of change and disrupters of the ordinary to start their journey to mastery.</h3>
     </div>
-    <div class="callouts">
-      <div class="third">
-        <h3>Arts &amp; Entertainment</h3>
-        <p></p>
-        <p>Whether you're a writer, musician or filmmaker, Chapman's industry-connected arts and entertainment programs will help turn your creative ambitions into career realities. Cultivate the skills to share your creative vision with the world.</p>
-        <p></p>
-        <a class="button white" href="http://www.chapman.edu/admission/graduate/arts-and-entertainment.aspx">View Arts &amp; Entertainment Programs </a>
-      </div>
-      <div class="third">
-        <h3>Science &amp; Technology</h3>
-        <p></p>
-        <p>Peruse any list of the fastest growing professions and the results are clear: science, technology and healthcare jobs are in high demand. Our graduate programs are uniquely equipped to launch you into a number of booming fields.</p>
-        <p></p>
-        <a class="button white" href="http://www.chapman.edu/admission/graduate/science-and-technology.aspx">View Science &amp; Technology Programs</a>
-      </div>
-      <div class="third">
-        <h3>Leadership &amp; Civic Engagement</h3>
-        <p></p>
-        <p>Immerse yourself in the hustle and bustle of the economy, the global stage, or the community through one of our many programs in leadership and community engagement and you'll master the skills you need to truly make a difference.</p>
-        <p></p>
-        <a class="button white" href="http://www.chapman.edu/admission/graduate/leadership-and-civic.aspx">View Leadership &amp; Civic Engagement Programs</a>
+    <div class="second">
+      <div class="actions" data-bottom="opacity:0;" data-center="opacity:1;">
+        <a class="button red apply smc-cta skrollable skrollable-after" data-cta-id="homepage-grad-admv" data--100-bottom="opacity:1" data-bottom="opacity:0" href="http://www.chapman.edu/admission/graduate/applynow.aspx" style="opacity: 1;">Apply to a Graduate Program Today</a>
       </div>
     </div>
   </div>
