--- a/app/views/widgets/home_page/_general_info.html
+++ b/app/views/widgets/home_page/_general_info.html
@@ -1,6 +1,6 @@
 <section class="section light-bg" id="generalInformation">
   <div class="maxWidth">
-    <h2 class="heading" skrollable skrollable-after" data-bottom="opacity:0;" data-center="opacity:1;">At Chapman, you'll discover there's an energy that runs through everything and everyone.</h2>
+    <h2 class="heading" skrollable skrollable-after data-bottom="opacity:0;" data-center="opacity:1;">At Chapman, you'll discover there's an energy that runs through everything and everyone.</h2>
     <div class="third">
       <!-- Images must be 480x320 for this space | unlimited images supported -->
       <div class="imagerotator">
