--- a/app/assets/stylesheets/widgets/home_page/blog_stories.scss
+++ b/app/assets/stylesheets/widgets/home_page/blog_stories.scss
@@ -22,12 +22,11 @@
     .announcement {
       overflow: auto;
       clear: both;
-      margin: 0 0 15px 0;
-      padding: 10px;
+      margin: -15px 0 15px 0;
+      padding: 0 10px;
       .details {
         float: none;
         max-width: 100%;
-        margin-top: 15px;
       }
       .imagerotator {
         float: none;
@@ -84,7 +83,6 @@
         .details {
           float: left;
           max-width: 65%;
-          margin-top: 0;
         }
         .imagerotator {
           float: left;
