Adjusted blog story margin on mobile.

--- a/app/assets/stylesheets/widgets/home_page/blog_stories.scss
+++ b/app/assets/stylesheets/widgets/home_page/blog_stories.scss
@@ -27,6 +27,7 @@
       .details {
         float: none;
         max-width: 100%;
+        margin-top: 25px;
       }
       .imagerotator {
         float: none;
@@ -83,6 +84,7 @@
         .details {
           float: left;
           max-width: 65%;
+          margin-top: 0;
         }
         .imagerotator {
           float: left;
